fix landing page and nav height issues on iOS

--- a/src/css/Hello.css
+++ b/src/css/Hello.css
@@ -13,7 +13,7 @@ div.main-wrapper {
     left: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
     /* border: 3px solid orange; */
 }
 
