--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -3,12 +3,13 @@
     position: fixed;
     right: 0;
     top: 0;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: center;
     background: linear-gradient(0deg, rgba(206,38,73,0.7) 50%, rgba(206,38,73,0.7) 50%), linear-gradient(0deg, rgba(206,38,73,0.7) 50%, rgba(206,38,73,0.7) 50%), url(../resources/nav-background.jpg) center;
     background-size: cover;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
     color: white;
     font-family: 'Abril Fatface', cursive;
